# SBA_credit_approval_MLOPS

./: .gitignore  Aptos_cropped copy.ipynb  Dockerfile  README.md  my_project.ipynb  pyproject.toml  tox.ini
.circleci/: config.yml
.ipynb_checkpoints/: Aptos_cropped copy-checkpoint.ipynb
Credit_Api/: requirements.txt  tox.ini
Credit_Api/app/: __init__.py  api.py  config.py  main.py
Credit_Api/app/schemas/: __init__.py  predict.py
Credit_Api/app/tests/: test_api.py
app/: api.py  config.py
app/tests/: test_api.py
classification_model/: config.yml  logger.py  pipeline.py  predict.py  setup.py  train_pipeline.py
classification_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
classification_model/config/: core.py
classification_model/processing/: data_manager.py  features.py  validation.py
classification_model/processing/tests/: conftest.py
classification_model/tests/: test_metadata.py  test_prediction.py
classification_model/trained_models/: xgb_model_output_v0.1.0.pkl
requirements/: requirements.txt
tests/: test_prediction.py
